fixed page border spilling bug

--- a/src/css/restaurant-srch.css
+++ b/src/css/restaurant-srch.css
@@ -3,7 +3,7 @@
     border-style: solid;
     border-color: gray;
     border-width: 1px;
-    height: 900px;
+    height: 1000px;
 }
 
 .page-title-style {
